# conduit

./: .env.example  .gitignore  CONDUIT_MASTER_PROMPT_v11.md  Dockerfile  README.md  docker-compose.prod.yml
backend/: .env.example  .gitignore  Makefile  alembic.ini  pyproject.toml
backend/ai_prompts/takeoff/: mep-takeoff-v1.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_password_reset_tokens.py  003_user_superadmin_field.py  004_plans_schema.py  005_takeoff_schema.py  006_rfi_schema.py  007_field_schema.py  008_notifications_schema.py  009_reports_schema.py  010_collaboration_schema.py  011_catalog_schema.py  012_assistant_schema.py  013_learning_schema.py  014_security_schema.py  015_cached_takeoff_items.py
backend/app/: __init__.py  main.py
backend/app/core/: config.py  database.py  dependencies.py  permissions.py  redis.py  security.py  storage.py  utils.py
backend/app/middleware/: __init__.py  error_handler.py  security.py
backend/app/models/: __init__.py  assistant.py  auth.py  base.py  catalog.py  collaboration.py  field.py  learning.py  notifications.py  plans.py  projects.py  reports.py  rfis.py  security.py  takeoff.py
backend/app/tasks/: __init__.py  ai_tasks.py  catalog_tasks.py  celery_app.py  email_tasks.py  learning_tasks.py  notification_tasks.py  plan_tasks.py  report_tasks.py  security_tasks.py  sla_tasks.py
backend/tests/: __init__.py  competitive_advantage_tests.py  conftest.py
backend/tests/competitive/: test_photo_deskew.py
backend/tests/integration/: test_assistant.py  test_auth_login.py  test_auth_refresh.py  test_auth_register.py  test_catalog.py  test_collaboration.py  test_field.py  test_learning.py  test_notifications.py  test_organizations.py  test_plans.py  test_projects.py  test_refresh_blacklist.py  test_reports.py  test_rfis.py  test_security_monitor.py  test_takeoff.py  test_tenant_isolation.py
backend/tests/security/: test_owasp_top10.py
backend/tests/unit/: test_field_state_machine.py  test_n1_query_elimination.py  test_password_reset_token.py  test_rbac.py  test_rsa_key_enforcement.py  test_security.py  test_sliding_window_rate_limit.py
deploy/: .htaccess
(+139 files in other folders)
